Main game function changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project Information
 pluginGroup=com.kedo
-pluginVersion=0.0.1
-pluginDescription=A Hytale plugin template
+pluginVersion=1.0.0
+pluginDescription=A mod that improves sprinting mechanics in Hytale. Removes sprinting stamina drain and allows for smoother movement while sprinting.
 
 # Gradle Configuration
 org.gradle.parallel=true
