--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "pluginName": "PluginName",
-  "version": "0.0.1",
+  "pluginName": "BetterSprint",
+  "version": "0.1",
   "debugMode": false
 }
