--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "pluginName": "BetterSprint",
-  "version": "0.1",
+  "pluginName": "BetterMovement",
+  "version": "1.1.0",
   "debugMode": false
 }
